--- a/bower.json
+++ b/bower.json
@@ -2,21 +2,21 @@
   "name": "dimroc",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "1.2.0-rc.1",
-    "json3": "~3.2.4",
+    "angular": "1.2.15",
+    "json3": "~3.2.6",
     "jquery": "~2.0.3",
-    "bootstrap-sass": "3.0.0",
+    "bootstrap-sass-official": "~3.1.0",
     "es5-shim": "~2.1.0",
-    "angular-resource": "1.2.0-rc.1",
-    "angular-cookies": "1.2.0-rc.1",
-    "angular-sanitize": "1.2.0-rc.1",
-    "angular-mocks": "1.2.0-rc.1",
-    "angular-scenario": "1.2.0-rc.1",
-    "angular-route": "~1.2.0-rc.1",
+    "angular-resource": "1.2.15",
+    "angular-cookies": "1.2.15",
+    "angular-sanitize": "1.2.15",
+    "angular-mocks": "1.2.15",
+    "angular-scenario": "1.2.15",
+    "angular-route": "1.2.15",
     "threejs": "*"
   },
   "devDependencies": {
-    "angular-mocks": "~1.0.7",
-    "angular-scenario": "~1.0.7"
+    "angular-mocks": "1.2.15",
+    "angular-scenario": "1.2.15"
   }
 }
