--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "connect-livereload": "~0.2.0",
     "grunt": "~0.4.1",
     "grunt-autoprefixer": "~0.2.0",
+    "grunt-bower-install": "~1.0.0",
     "grunt-build-control": "^0.1.3",
     "grunt-concurrent": "~0.3.0",
     "grunt-contrib-clean": "~0.5.0",
