--- a/bower.json
+++ b/bower.json
@@ -1,20 +1,28 @@
 {
-  "name": "dimroc",
+  "name": "experiments",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "1.2.15",
-    "json3": "~3.2.6",
-    "jquery": "~2.0.3",
-    "bootstrap-sass-official": "~3.1.0",
-    "es5-shim": "~2.1.0",
-    "angular-resource": "1.2.15",
-    "angular-cookies": "1.2.15",
-    "angular-sanitize": "1.2.15",
-    "angular-route": "1.2.15",
-    "threejs": "*"
+    "angular": "^1.4.0",
+    "bootstrap-sass-official": "^3.2.0",
+    "angular-animate": "^1.4.0",
+    "angular-cookies": "^1.4.0",
+    "angular-resource": "^1.4.0",
+    "angular-route": "^1.4.0",
+    "angular-sanitize": "^1.4.0",
+    "angular-touch": "^1.4.0"
   },
   "devDependencies": {
-    "angular-mocks": "1.2.15",
-    "angular-scenario": "1.2.15"
+    "angular-mocks": "^1.4.0"
+  },
+  "appPath": "app",
+  "moduleName": "experimentsApp",
+  "overrides": {
+    "bootstrap": {
+      "main": [
+        "less/bootstrap.less",
+        "dist/css/bootstrap.css",
+        "dist/js/bootstrap.js"
+      ]
+    }
   }
 }
