--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "generator-karma": "^2.0.1",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
-    "grunt-cli": "^1.2.0",
+    "grunt-cli": "^1.4.3",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compass": "^1.0.0",
@@ -35,5 +35,9 @@
   },
   "engines": {
     "node": ">=0.10.0"
+  },
+  "dependencies": {
+    "grunt-google-cdn2": "^0.6.0",
+    "yo": "^4.3.1"
   }
 }
